                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 28-06-2006 added: AIFF codec to paplayer.
 - 28-06-2006 fixed: Editing of text containing UTF8 character codes could cause crashes.
 - 28-06-2006 fixed: Listcontrol could sometimes truncate one character when not scrolling the selected item.
 - 26-06-2006 fixed: "Query Info For All Albums" accessible in files & library. Now Playing is now fully accessible at the bottom of context menus.
                             Item count fixed and a check for * all items and parent folder implemented.
                             Also localized a few of the strings.
 - 26-06-2006 updated: Dutch language file (Thnx to nightspirit)
 - 26-06-2006 updated: Chinese (Simple) language file (Thnx to omenpica)
 - 26-06-2006 updated: Russian language file (Thnx to que_)
 - 26-06-2006 updated: Norwegian language file (Thnx to vnm)
 - 26-06-2006 changed: cddb info is displayed even if tag reading is disabled
 - 26-06-2006 fixed: if cddb is disabled, the content of a cd is listed, then cddb is enabled, the info from cddb is not displayed
 - 26-06-2006 changed: moved playlist window content into a directory class
 - 26-06-2006 changed: moved shares of media windows into the view state
 - 26-06-2006 fixed: some dll loader cleanup and additions, attempt 2 (python was broken since the 24th after previous version of this)
 - 25-06-2006 fixed: reverted elupus "dll loader cleanup and additions" because it broke python
 - 25-06-2006 fixed: Subtitles should now word-wrap (based on calibration values) when TTF fonts are used.
 - 25-06-2006 added: Font fallback to "font13" if a requested font isn't available.